- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    avidemux.desktop -> 1.3

--- a/avidemux.desktop
+++ b/avidemux.desktop
@@ -3,9 +3,8 @@ Name=avidemux
 Comment=Audio/video editing software
 Comment[pl]=Edytor audio/wideo
 Exec=avidemux2
-Icon=avidemux.png
+Icon=avidemux
 Terminal=false
 Type=Application
-Encoding=UTF-8
 Categories=GTK;AudioVideo;AudioVideoEditing;
 # vi: encoding=utf-8
