--- a/avidemux.desktop
+++ b/avidemux.desktop
@@ -2,7 +2,8 @@
 Name=avidemux
 Comment=Audio/video editing software
 Comment[pl]=Edytor audio/wideo
-Exec=avidemux2
+Exec=avidemux2_gtk
+MimeType=video/mpeg;video/quicktime;video/x-msvideo;video/x-anim;audio/x-mp3;audio/x-mp2;
 Icon=avidemux
 Terminal=false
 Type=Application
