--- a/avidemux.desktop
+++ b/avidemux.desktop
@@ -1,7 +1,8 @@
 [Desktop Entry]
-Name=avidemux
-Comment=Audio/video editing software
-Comment[pl]=Edytor audio/wideo
+Name=Avidemux Video Editor (GTK)
+GenericName=Video Editor
+Comment=Audio/video editing software - GTK interface
+Comment[pl]=Edytor audio/wideo - GTK
 Exec=avidemux2_gtk
 MimeType=video/mpeg;video/quicktime;video/x-msvideo;video/x-anim;audio/x-mp3;audio/x-mp2;
 Icon=avidemux
